Disable tests on osx

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,7 +34,7 @@ test:
     - nbformat
     - nbconvert
   commands:
-    - py.test test/
+    - py.test test/  # [not osx]
   imports:
     - otpod
 
