--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "0.3" %}
+{% set version = "0.4" %}
 
 package:
   name: otpod
@@ -7,19 +7,21 @@ package:
 source:
   fn: otpod-{{ version }}.tar.gz
   url: https://github.com/openturns/otpod/archive/v{{ version }}.tar.gz
-  sha256: 68c5512d68de2beb70860c5747dfc14f18e54da28f03c57beb81377afdadff50
+  sha256: d051a48227e7d387cb3cdd6c6368c5173b85e6ac08e82291316637266f63863b
 
 build:
-  number: 2
-  script: python setup.py install --single-version-externally-managed --record=record.txt
+  number: 0
+  noarch: python
+  script: "{{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv"
 
 requirements:
-  build:
+  host:
+    - pip
     - setuptools
     - python
   run:
     - python
-    - openturns >=1.6
+    - openturns
     - matplotlib >=1.5
     - scikit-learn >=0.17
     - statsmodels >=0.6
@@ -40,6 +42,7 @@ test:
 
 about:
   home: http://openturns.org/
+  license_family: LGPL
   license: LGPL3
   license_file: COPYING.LESSER
   summary: A module to build Probability of Detection for Non Destructive Testing
