--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -6,7 +6,11 @@ channel_targets:
 - conda-forge main
 docker_image:
 - condaforge/linux-anvil
+openturns:
+- 1.12*
 pin_run_as_build:
+  openturns:
+    max_pin: x.x
   python:
     min_pin: x.x
     max_pin: x.x
