--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
   sha256: 664a4d209ef6b8462df72747f1d941791a6cf02842ce84e648ab2b9b333ee919
 
 build:
-  number: 1
+  number: 2
   noarch: python
   script: {{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv
 
@@ -19,10 +19,10 @@ requirements:
     - pip
     - setuptools
     - python >=3
-    - openturns
+    - openturns 1.15*
   run:
     - python >=3
-    - openturns
+    - openturns 1.15*
     - matplotlib-base >=1.5
     - scikit-learn >=0.17
     - statsmodels >=0.6
@@ -43,8 +43,8 @@ test:
 
 about:
   home: http://openturns.org/
+  license: LGPL-3.0-or-later
   license_family: LGPL
-  license: LGPL3
   license_file: COPYING.LESSER
   summary: A module to build Probability of Detection for Non Destructive Testing
 
